k8s/04_app_service_route.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  selector:
    app: app-api
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8000
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: app-route
spec:
  to:
    kind: Service
    name: app-service
  port:
    targetPort: 8000
  tls:
    termination: edge
